--- a/myblog/accounts/templates/accounts/login.html
+++ b/myblog/accounts/templates/accounts/login.html
@@ -26,7 +26,7 @@
                     Você fez login com {{ user }}
                 {% endif %}
             </div>
-            <div>
+            <div class="img_login">
                 <h2>Imagem</h2>
             </div>
         </div>
