Add categorias, cadastro user

--- a/myblog/accounts/templates/accounts/cadastro.html
+++ b/myblog/accounts/templates/accounts/cadastro.html
@@ -38,7 +38,7 @@
                 <label for="senha2">Repetir Senha</label>
                 <input class="input_register" type="password" placeholder="Digite uma senha" name="senha2" id="senha2">
             </div>
-            <button type="submit">Cadastrar</button>
+            <button class="button_confirm" type="submit">Cadastrar</button>
         </form>
     </div>
 </div>
