--- a/myblog/accounts/templates/accounts/dashboard.html
+++ b/myblog/accounts/templates/accounts/dashboard.html
@@ -3,5 +3,6 @@
 {% block conteudo %}
     <div class="main_dashboard">
         <h2>Página dashboard</h2>
+        {{ user_login }}
     </div>
 {% endblock %}
