--- a/myblog/accounts/templates/accounts/login.html
+++ b/myblog/accounts/templates/accounts/login.html
@@ -19,7 +19,7 @@
                             <input type="password" name="senha">
                         </div>
                         <div class="input_form text-center">
-                            <button type="submit">Entrar</button>
+                            <button class="button_confirm" type="submit">Entrar</button>
                         </div>
                     </form>
                 {% else %}
