--- a/myblog/post/templates/post/post.html
+++ b/myblog/post/templates/post/post.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% block conteudo %}
 <div class="main_posts">
-
+    {% if user_login %}
+        <span>{{ user_login }}</span>
+    {%endif%}
     <h1>Publicações</h1>
     {% for posts in posts %}
     <a href="{% url 'view_post' posts.id %}" class="link_post">
