add publicação, usuarios

--- a/myblog/accounts/templates/accounts/categoria.html
+++ b/myblog/accounts/templates/accounts/categoria.html
@@ -8,7 +8,9 @@
                 <label for="nome">Nome da Categoria:</label>
                 <input type="text" name="categoria" id="categoria" placeholder="Nome da categoria que deseja criar">
             </div>
-            <button class="button_confirm" type="submit">Confirmar</button>
+            <div class="button_categorias">
+                <button class="button_confirm" type="submit">Confirmar</button>
+            </div>
         </form>
     </div>
 {% endblock %}
