--- a/myblog/accounts/templates/accounts/dashboard.html
+++ b/myblog/accounts/templates/accounts/dashboard.html
@@ -3,6 +3,8 @@
 {% block conteudo %}
     <div class="main_dashboard">
         <h2>Página dashboard</h2>
-        {{ user_login }}
+        ID: {{ usuario_id }}
+        Nome: {{ usuario_name }}
+        Acesso: {{ usuario_tipo }}
     </div>
 {% endblock %}
