--- a/myblog/post/templates/post/view_post.html
+++ b/myblog/post/templates/post/view_post.html
@@ -4,7 +4,7 @@
     <div class="container_post">
         <div class="page_post">
             <h2>{{ post.titulo }}</h2>
-            <textarea rows="46" cols="150">{{ post.publicacao }}</textarea>
+            <textarea rows="46" cols="150" disabled>{{ post.publicacao }}</textarea>
         </div>
     </div>
     {% endblock %}
