--- a/myblog/post/templates/post/post_update.html
+++ b/myblog/post/templates/post/post_update.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 {% block conteudo %}
     <div class="container_post_create">
-        <h1>Criar publicação</h1>
-        <form action="{% url 'post_create' %}" method="POST">
+        <h1>Editar publicação</h1>
+        
+        <form action="{% url 'post_update' id_post.id %}" method="POST">
             {% csrf_token %}
             <div class="input_post_create">
                 <label for="categoria">Categoria:</label>
                 <select name="categoria" id="categoria">
-                    <option value="" selected disabled>Selecione uma categoria</option>
+                    <option value="{{ id_post.categoria }}" selected>{{ id_post.categoria }}</option>
                     {% for categoria in categorias %}
                         <option value="{{ categoria }}">{{ categoria.nome_categoria }}</option>
                     {% endfor %}
@@ -18,10 +19,10 @@
             </div>
             <div class="input_post_create">
                 <label for="titulo">Titulo:</label>
-                <input type="text" name="titulo" id="titulo">
+                <input type="text" name="titulo" id="titulo" value="{{ id_post.titulo }}">
             </div>
             <div class="input_post_create">
-                <textarea name="publicacao" id="publicacao" cols="189" rows="35"></textarea>
+                <textarea name="publicacao" id="publicacao" cols="189" rows="35">{{ id_post.publicacao }}</textarea>
             </div>
             <div class="button_categorias">
                 <button class="button_confirm" type="submit">Confirmar</button>
