Adc comentarios em publicações

--- a/myblog/accounts/templates/accounts/cadastro_comum.html
+++ b/myblog/accounts/templates/accounts/cadastro_comum.html
@@ -3,8 +3,8 @@
 {%block conteudo %}
 <div class="main_dashboard">
     <div class="container_register">
-        <h1>Cadastro</h1>
-        <form action="{% url 'cadastro' %}" method="POST">
+        <h1>Cadastro Usuario Comum</h1>
+        <form action="{% url 'cadastrar' %}" method="POST">
             {% csrf_token %}
             <div class="inputs_register">
                 <label for="nome">Nome</label>
@@ -23,14 +23,6 @@
                 <input class="input_register" type="date" placeholder="Digite a data de nascimento" value="{{ request.POST.data_nascimento }}" name="data_nascimento" id="data_nascimento">
             </div>
             <div class="inputs_register">
-                <label for="nivel_acesso">Nível de acesso</label>
-                <select class="input_register" name="nivel_acesso" id="nivel_acesso">
-                    <option value="AD">Administrador</option>
-                    <option value="AU">Autor</option>
-                    <option value="CO">Comum</option>
-                </select>
-            </div>
-            <div class="inputs_register">
                 <label for="senha">Senha</label>
                 <input class="input_register" type="password" placeholder="Digite uma senha" name="senha" id="senha">
             </div>
@@ -38,9 +30,7 @@
                 <label for="senha2">Repetir Senha</label>
                 <input class="input_register" type="password" placeholder="Digite uma senha" name="senha2" id="senha2">
             </div>
-            <div class="box_btn_cadastro">
-                <button class="button_confirm" type="submit">Cadastrar</button>
-            </div>
+            <button class="button_confirm" type="submit">Cadastrar</button>
         </form>
     </div>
 </div>
