--- a/myblog/accounts/templates/accounts/dashboard.html
+++ b/myblog/accounts/templates/accounts/dashboard.html
@@ -3,8 +3,6 @@
 {% block conteudo %}
     <div class="main_dashboard">
         <h2>Página dashboard</h2>
-        ID: {{ usuario_id }}
-        Nome: {{ usuario_name }}
-        Acesso: {{ usuario_tipo }}
+        <span>Olá <b>{{ usuario_name }}</b>, é um grande prazer encontrar você novamente por aqui. :)</span>
     </div>
 {% endblock %}
