--- a/myblog/post/templates/post/post_update.html
+++ b/myblog/post/templates/post/post_update.html
@@ -25,6 +25,7 @@
                 <textarea name="publicacao" id="publicacao" cols="189" rows="35">{{ id_post.publicacao }}</textarea>
             </div>
             <div class="button_categorias">
+                <a class="button_cancel" href="{% url 'post' %}">Cancelar</a>
                 <button class="button_confirm" type="submit">Confirmar</button>
             </div>
         </form>
