Adc mensagens de alertas, e verificação em criar usuario se usuario ja existe

--- a/myblog/accounts/templates/accounts/cadastro_comum.html
+++ b/myblog/accounts/templates/accounts/cadastro_comum.html
@@ -3,7 +3,7 @@
 {%block conteudo %}
 <div class="main_dashboard">
     <div class="container_register">
-        <h1>Cadastro Usuario Comum</h1>
+        <h1>Cadastro</h1>
         <form action="{% url 'cadastrar' %}" method="POST">
             {% csrf_token %}
             <div class="inputs_register">
