add versão final do projeto

--- a/myblog/accounts/templates/accounts/categoria.html
+++ b/myblog/accounts/templates/accounts/categoria.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{%block titulo %}Categoria{% endblock %}
 {% block conteudo %}
     <div class="content_categoria">
         <h2>Adicionar nova Categoria</h2>
