--- a/myblog/accounts/templates/accounts/categorias.html
+++ b/myblog/accounts/templates/accounts/categorias.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{%block titulo %}Categorias{% endblock %}
 {% block conteudo %}
     <div class="container_categorias">
         <div class="content_categoria">
