--- a/myblog/accounts/templates/accounts/dashboard.html
+++ b/myblog/accounts/templates/accounts/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{%block titulo %} Página de inicio {% endblock %}
 {% block conteudo %}
     <div class="main_dashboard">
         <h2>Página dashboard</h2>
