--- a/myblog/accounts/templates/accounts/usuarios.html
+++ b/myblog/accounts/templates/accounts/usuarios.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-
+{%block titulo %}Usuários{% endblock %}
 {% block conteudo %}
     <div class="container_users">
         <div class="content_user">
-        <h2>Página de usuarios</h2>
+        <h2>Página de usuários</h2>
             <table>
                 <tr>
                     <th>Nome</th>
