--- a/myblog/post/templates/post/post_update.html
+++ b/myblog/post/templates/post/post_update.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{%block titulo %} Editar publicação {% endblock %}
 {% block conteudo %}
     <div class="container_post_create">
         <h1>Editar publicação</h1>
