--- a/myblog/accounts/templates/accounts/cadastro.html
+++ b/myblog/accounts/templates/accounts/cadastro.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{%block titulo %}Cadastro{% endblock %}
 {%block conteudo %}
 <div class="main_dashboard">
     <div class="container_register">
