--- a/myblog/post/templates/post/post_create.html
+++ b/myblog/post/templates/post/post_create.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{%block titulo %}Criar publicação{% endblock %}
 {% block conteudo %}
     <div class="container_post_create">
         <h1>Criar publicação</h1>
