--- a/myblog/post/templates/post/view_post.html
+++ b/myblog/post/templates/post/view_post.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{%block titulo %}Post {{ post.titulo }}{%endblock%}
+{%block titulo %}Post{%endblock%}
 {% block conteudo %}
     <div class="container_post">
         <div class="page_post">
