--- a/myblog/accounts/templates/accounts/usuarios.html
+++ b/myblog/accounts/templates/accounts/usuarios.html
@@ -17,6 +17,7 @@
                     <td>{{ usuario.sobrenome }}</td>
                     <td>{{ usuario.usuario }}</td>
                     <td>{{ usuario.tipo }}</td>
+                    <td><a class="button_post_delete" href="{% url 'ver_usuario' usuario.id %}" title="Deletar usuário">Deletar</a></td>
                 </tr>
                 {% endfor %}
             </table>
