Atualizando forma de relatorio

--- a/myblog/accounts/templates/accounts/usuarios.html
+++ b/myblog/accounts/templates/accounts/usuarios.html
@@ -10,6 +10,7 @@
                     <th>Sobrenome</th>
                     <th>Usuário</th>
                     <th>Acesso</th>
+                    <th>Ações</th>
                 </tr>
                 {% for usuario in user %}          
                 <tr>
